# Web-CAM-Feed

./: README.md  pyproject.toml
src/webcam-feed-flask/: app.py  camera.py
