[tool.poetry]
name = "webcam-feed-flask"
version = "0.1.0"
description = ""
authors = ["vlad.luca"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
